--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "test": "jest --runInBand",
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand --detectOpenHandles",
     "db:apply": "psql -h 127.0.0.1 -U mco -d orchestrator -f src/db/schema.sql"
   },
   "dependencies": {
+    "@azure/arm-subscriptions": "^5.1.0",
+    "@azure/identity": "^4.12.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
